# yeoboseyo

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
yeoboseyo/: .gitlab-ci.yml  __init__.py  app.py  env.sample  feedsparser_data.py  forms.py  go.py  logging.conf  mastodon_create_app.py  models.py  report.py  run.py  settings.py  switch.py  test_models.py  test_settings.py
yeoboseyo/migrations/: alter_table_trigger_add_telegram.sql  alter_table_trigger_add_wallabag.sql  alter_table_trigger_add_webhook.sql
yeoboseyo/services/: __init__.py  joplin.py  localstorage.py  mail.py  mastodon.py  reddit.py  service_joplin.py  service_mail.py  service_mastodon.py  service_reddit.py  service_rss.py  telegram.py  wallabag.py  webhook.py
yeoboseyo/templates/: base.html  index.html  localstorage.md
yeoboseyo/tests/: __init__.py  conftest.py  test_models.py  test_settings.py
