[metadata]
name=yeoboseyo
description="Yeoboseyo - 여보세요"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://framagit.org/annyong/yeoboseyo
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=service python starlette
version=file: VERSION.txt

classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
    aiofiles==0.8.0
    aiosqlite==0.17.0
    arrow==1.2.1
    feedparser==6.0.8
    httpx==0.21.1
    jinja2==3.0.3
    Mastodon.py==1.5.1
    orm==0.3.1
    pypandoc==1.7.2
    python-multipart==0.0.5
    python-slugify==5.0.2
    rich==10.16.1
    starlette==0.17.1
    uvicorn==0.16.0
    wallabagapi==1.3.2


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
ignore = E402, F401
