[metadata]
name=yeoboseyo
description="Yeoboseyo - 여보세요"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/yeoboseyo
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=service python starlette
version=file: VERSION.txt

classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

[options]
zip_safe=false

include_package_data=true

install_requires=
    aiofiles==23.2.1
    aiosqlite==0.19.0
    arrow==1.3.0
    feedparser==6.0.11
    httpx==0.26.0
    jinja2==3.1.2
    Mastodon.py==1.8.1
    orm==0.3.1
    pypandoc==1.12
    python-multipart==0.0.9
    python-slugify==8.0.4
    rich==13.7.0
    starlette==0.37.1
    uvicorn==0.27.0
    wallabagapi==1.3.2


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
ignore = E402, F401
